<resources>
    <string name="app_name">HistoricalCalculator</string>
    <string name="rub">RUB</string>
    <string name="currency_info">
        <![CDATA[
        <b>Венецианский дукат</b><p><br>
Венецианский дукат начали чеканить в конце XIII века, вдохновившись флорентийским флорином. Благодаря стабильному весу и качеству монеты, со временем дукат начали чеканить почти все страны Европы, и дукат заменил флорин на посту эталонной монеты. Дукат так же чеканили из золота, 3.5 грамма 986-й пробы. Сплав золота этой пробы получил название дукатного золота. <br><br>
1 дукат = 19920.32 рублей <br>
1 рубль = 0.0000502 дукатов<hr><br><br>

<b>Венецианская лира</b><p><br>
Венецианская лира впервые появилась в XIII веке. В конце XV века она приобрела свой канонический вид - серебряная монета весом 6.52 грамма 948-ой пробы.<br><br>
1 лира = 346.03 рублей <br>
1 рубль = 0.00289 лир<hr><br><br>

<b>Испанский реал</b><p><br>
Испанский реал был основной валютой Испании с середины XIV века, вплоть до введения в оборот песеты в 1868 году. Известное наименование реала - песо - монета, достоинством в 8 реалов. Из Кастильской марки серебра чеканили 67 реалов, что давало 3.195 граммов чистого серебра на монету.<br><br>
1 реал = 5 рублей <br>
1 рубль = 0.2 реалов<hr><br><br>

<b>Доллар дикого запада</b><p><br>
В 1792 в Филадельфии открылся монетный двор, и там стали чеканить первые однодолларовые монеты. В 1900 году наступало новое время в американской истории, Дикий Запад уходил в прошлое, ему на смену шли технологии и урбанизация. В современном мире американский доллар является одной из самых главных валют, и его примерный курс знает каждый, в отличии курса доллара 100 лет назад.<br><br>
1 доллар = 3225.81 рублей <br>
1 рубль = 0.00031 долларов<hr><br><br>

<b>Флорентийский флорин</b><p><br>
Флорентийский флорин впервые начали чеканить во Флоренции в середине XIII века. Флорин оказал сильное влияние на чеканку монет, со временем многие страны Европы стали чеканить похожие монеты. Флорин чеканили из почти чистого золота весом 3.53 г.<br><br>
1 флорин = 19083.97 рублей <br>
1 рубль = 0.0000524 флоринов<hr><br><br>

<b>Советский рубль</b><p><br>
Первые упоминания рубля относятся к XIII веку. Советский рубль начал своё существование в 1923 году, вплоть до 1991. После денежной реформы 1947 года было введено единое счисление в рублях, а  после денежной реформы 1961 года курс советского рубля был привязан к золоту, хотя напрямую на золото и не обменивался.<br><br>
1 советский рубль = 100 рублей <br>
1 рубль = 0.1 советских рублей
        ]]>
    </string>

    <string name="ac_text">AC</string>
    <string name="ven_lira_text">Венец. лира\n 15в.</string>
    <string name="dukat_text">Дукат\n 14в.</string>
    <string name="florin_text">Флор. флорин\n 15в.</string>
    <string name="seven_text">7</string>
    <string name="eight_text">8</string>
    <string name="nine_text">9</string>
    <string name="ruble_text">Рубль\n 20в.</string>
    <string name="four_text">4</string>
    <string name="five_text">5</string>
    <string name="six_text">6</string>
    <string name="real_text">Исп. реал\n 16в.</string>
    <string name="one_text">1</string>
    <string name="two_text">2</string>
    <string name="three_text">3</string>
    <string name="dollar_text">Доллар дикого запада\n 19в.</string>
    <string name="dot_text">.</string>
    <string name="zero_text">0</string>
    <string name="back_text">Назад</string>
    <string name="equals_text">=</string>
</resources>

