<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#101611"
    android:orientation="vertical"
    tools:context=".CalculatorActivity">

    <TextView
        android:id="@+id/question_mark"
        android:layout_width="50sp"
        android:layout_height="50sp"
        android:background="@drawable/rectangle_drawable"
        android:layout_marginStart="5sp"
        android:text="?"
        android:textColor="#485955"
        android:textAlignment="center"
        android:layout_marginTop="5sp"
        android:textSize="34sp">
    </TextView>

    <TextView
        android:id="@+id/math_operation"
        android:layout_width="match_parent"
        android:layout_height="80sp"
        android:textColor="@color/white"
        android:gravity="end"
        android:ellipsize="start"
        android:textSize="40sp"
        android:singleLine="true"
        />
    <TextView
        android:id="@+id/result_text"
        android:layout_width="match_parent"
        android:layout_height="100sp"
        android:textColor="@color/white"
        android:gravity="end"
        android:ellipsize="end"
        android:textSize="30sp"
        android:singleLine="true"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        >
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:orientation="horizontal"
            android:layout_weight="1"
            tools:ignore="Suspicious0dp">


            <TextView
                style="@style/ActionButton"
                android:id="@+id/btn_AC"
                android:text="@string/ac_text">
            </TextView>

            <TextView
                style="@style/ActionButton"
                android:id="@+id/btn_ven_lira"
                android:text="@string/ven_lira_text">
            </TextView>

            <TextView
                style="@style/ActionButton"
                android:id="@+id/btn_dukat"
                android:text="@string/dukat_text">
            </TextView>

            <TextView
                style="@style/ActionButton"
                android:id="@+id/btn_florin"
                android:text="@string/florin_text">
            </TextView>

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:orientation="horizontal"
            android:layout_weight="1"
            tools:ignore="Suspicious0dp">

            <TextView
                style="@style/NumberButton"
                android:id="@+id/btn_7"
                android:text="@string/seven_text">
            </TextView>

            <TextView
                style="@style/NumberButton"
                android:id="@+id/btn_8"
                android:text="@string/eight_text">
            </TextView>

            <TextView
                style="@style/NumberButton"
                android:id="@+id/btn_9"
                android:text="@string/nine_text">
            </TextView>

            <TextView
                style="@style/ActionButton"
                android:id="@+id/btn_ruble_20"
                android:text="@string/ruble_text">
            </TextView>

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:orientation="horizontal"
            android:layout_weight="1"
            tools:ignore="Suspicious0dp">
            <TextView
                style="@style/NumberButton"
                android:id="@+id/btn_4"
                android:text="@string/four_text">
            </TextView>

            <TextView
                style="@style/NumberButton"
                android:id="@+id/btn_5"
                android:text="@string/five_text">
            </TextView>

            <TextView
                style="@style/NumberButton"
                android:id="@+id/btn_6"
                android:text="@string/six_text">
            </TextView>

            <TextView
                style="@style/ActionButton"
                android:id="@+id/btn_16c_real"
                android:text="@string/real_text">
            </TextView>

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:orientation="horizontal"
            android:layout_weight="1"
            tools:ignore="Suspicious0dp">

            <TextView
                style="@style/NumberButton"
                android:id="@+id/btn_1"
                android:text="@string/one_text">
            </TextView>

            <TextView
                style="@style/NumberButton"
                android:id="@+id/btn_2"
                android:text="@string/two_text">
            </TextView>

            <TextView
                style="@style/NumberButton"
                android:id="@+id/btn_3"
                android:text="@string/three_text">
            </TextView>

            <TextView
                style="@style/ActionButton"
                android:id="@+id/btn_19c_dollar"
                android:textSize="19sp"
                android:text="@string/dollar_text">
            </TextView>

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:orientation="horizontal"
            android:layout_weight="1"
            tools:ignore="Suspicious0dp">

            <TextView
                style="@style/NumberButton"
                android:id="@+id/btn_dot"
                android:text="@string/dot_text">
            </TextView>

            <TextView
                style="@style/NumberButton"
                android:id="@+id/btn_0"
                android:text="@string/zero_text">
            </TextView>

            <TextView
                style="@style/NumberButton"
                android:id="@+id/btn_back"
                android:text="@string/back_text">
            </TextView>

            <TextView
                style="@style/ActionButton"
                android:id="@+id/btn_equals"
                android:text="@string/equals_text">
            </TextView>

        </LinearLayout>

    </LinearLayout>

</LinearLayout>
